# rayyan

./: .dockerignore  AGENT_IMPLEMENTATION.md  AGENT_SUMMARY.md  DOCKER.md  DOCKER_COMPOSE_INDIVIDUAL.md  DOCKER_SETUP.md  README.md  SETUP_SUPABASE.md  docker-compose.yml  setup-backend.sh
backend/: .dockerignore  .env.example  .gitignore  DATABASE_SCHEMA.md  Dockerfile  OPENAI_SETUP.md  README.md  USER_MANAGEMENT_DESIGN.md  USER_MANAGEMENT_SETUP.md  auth.py  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
backend/agent/: builder.py  llm_config.py  tools.py
backend/docs/: dashboard_integration_plan.md  farm_normalization.md
backend/migrations/: 001_user_management.sql
backend/routers/: agent.py  threads.py
backend/scripts/: verify_imports.py  verify_structure.py
backend/src/: README.md  __init__.py  main.py
backend/src/agent/: __init__.py  builder.py  llm_config.py  system_prompt.py
backend/src/core/: __init__.py  auth.py  config.py  database.py
backend/src/models/: __init__.py  base.py.bak  common.py  crop.py  farm.py  farm_crop.py  farm_task.py  farm_zone.py  irrigation_schedule.py  message.py  pesticide_inventory.py  run.py  sensor_reading.py  team_member.py  thread.py  user.py  water_storage.py  water_usage.py  yield_record.py  zone_alert.py  zone_recommendation.py
backend/src/routers/: __init__.py  agent.py  auth.py  farms.py  pesticides.py  tasks.py  team.py  threads.py  users.py  yields_water.py  zones.py
backend/src/schemas/: __init__.py  base.py.bak  common.py  crop.py  farm.py  farm_crop.py  farm_task.py  thread.py  (+8 more)
(+65 files in other folders)
