[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
