[project]
name = "backend"
version = "0.1.0"
description = "Rayyan Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.29.0",
    "uvicorn>=0.37.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    # AI/LLM dependencies
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
